src/objects/AIF_Device_App__c.object
<CustomObject>
    <fields>
        <fullName>AIF_Name__c</fullName>
        <label>AIF Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AIF_Device_Apps</relationshipLabel>
        <relationshipName>AIF_Device_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_SubType__c</fullName>
        <label>App SubType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>AIF_Device_Apps</relationshipLabel>
        <relationshipName>AIF_Device_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last Refresh</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AIF_Device_App</label>
    <nameField>
        <label>AIF_Device_App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIF_Device_Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>